--- a/color.html
+++ b/color.html
@@ -26,53 +26,89 @@
 	</header>
 	
 <section>
-	<img src="images/color.png" class="centerimage" alt= "typeface versus font" width= "90%">
+	<img src="images/color.png" class="centerimage" alt= "color palette" width= "90%">
 	<p>If you're a web designer who struggles to create color schemes for websites, you're not alone. Choosing colors may seem intuitive, but in fact there's a lot of strategy that goes into creating effective color palettes. Everyone has subjective opinions on different colors--some people love bold, bright colors like cherry red and neon green, whereas others gravitate towards soft pastels. The challenge for web designers is to look past their subjective views, and those of their clients, in order to choose colors strategically.</p>
 	<p>Fortunately, there are certain principles and methods that help make color choice a breeze for web designers. In this guide, we'll teach you how to take the guesswork out of choosing colors for your web design projects. First, we'll review the fundamental color theory and psychology principles every designer needs to know. Then, we'll spell out a simple 3-step process that’ll help you choose colors for websites like a pro.</p>
 	<p>Check out Ran Segall's video below for a 12-minute introduction to using colors in web design.</p>
 	<iframe width="560" height="315" class="centerimage" src="https://www.youtube.com/embed/UuPt4RpV4Xc?si=3q7yvIBf9OY9cHr2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 	
-	<h2>Why Choosing The Right Colors Is Important</h2>
+	<h2>WHY CHOOSING THE RIGHT COLORS IS IMPORTANT</h2>
 	<p>You may be wondering: is color choice really that important for a website? The answer is a resounding yes. Good color choice promotes <strong>legibility</strong>, <strong>visual appeal</strong>, and <strong>brand recognition</strong>. Bad color choice, on the other hand, creates a poor user experience. As we all know, a poor user experience spells disaster for a business website.</p>
 	
-	<h3>Legibility</h3>
+	<h3>LEGIBILITY</h3>
+	<div class="cardpright">
+  <img src="images/legibility.png" alt= "legibility" width= "100%">
+		 <div class="container">
+    <p class="strongp"><strong>GOOD VS. BAD LEGIBILITY</strong></p><br>
+  </div>
+</div>
 	<p>Color choice helps determine whether the content on a page is readable. Legibility is optimized with an appropriate level of color contrast between the text and the background. Too little contrast makes the text hard to read; too much contrast is hard on the eyes. A classic example of color contrast is black text on a white background. If you look closely, you'll notice that many websites actually use dark grey text on a white or off-white background in order to maximize legibility while minimizing eye strain.</p>
+<a href="https://www.nngroup.com/articles/legibility-readability-comprehension/" target="_blank" class="button" style="clear: both">MORE ABOUT LEGIBILITY</a>
 	
-	<h3>Visual Appeal</h3>
+	<h3>VISUAL APPEAL</h3>
 	<p>When referring to visual appeal in web design, we're not talking about subjective color opinions. Instead, the emphasis is on creating harmonious color palettes that are easy on the eyes. Choosing colors that have broad visual appeal requires an understanding of color theory. As we'll discuss in more detail later on, there are three types of color schemes that have universal appeal: monochromatic, complementary, and analogous. Recognizing and knowing how to create these color schemes makes choosing colors for websites easier and more effective.</p>
+	<a href="https://www.nngroup.com/articles/aesthetic-usability-effect/" target="_blank" class="button" style="clear: both">MORE ABOUT VISUAL APPEAL</a><br><br>
+	<img src="images/visualappeal.jpeg" class="centerimage" alt= "visual appeal example" width= "60%">
+	<div class="quote"><p style="clear:both" class="centertext">Photo credit: <cite>Example of a website with a harmonious color scheme.
+		<br>Source: Taras Migulko via Dribbble</cite></p></div><br>
 	
-	<h3>Brand Recognition</h3>
+	<h3>BRAND RECOGNITION</h3>
 	<p>Another important role of colors in a web design context is brand recognition. Many brands have a primary color (or two) that has a strong presence across their website, marketing materials, and other brand assets. Some classic examples that come to mind are Coca-Cola's red, the Starbucks green, and Ikea's high-contrast blue and yellow. Consistency is key for creating brand recognition through color. Later on, we'll see how color psychology comes into play when choosing primary brand colors.</p>
-	<img src="images/icons.jpeg" class="centerimage" alt= "typeface versus font" width= "50%">
+	<a href="https://www.jessicajonesdesign.com/types-of-logos/" target="_blank" class="button" style="clear: both">LOGO EXAMPLES</a><br><br>
+	<img src="images/icons.jpeg" class="centerimage" alt= "Coca-Cola, Ikea, and Starbuck logos" width= "60%">
 	<div class="quote"><p style="clear:both" class="centertext">Photo credit: <cite>Coca-Cola, Ikea, and Starbucks have recognizable brand colors</cite></p></div>
 	
-	<h2>Using Color Theory To Choose Colors</h2>
-		<img src="images/color_theory.png" class="leftimage" alt= "typeface versus font" width= "40%">
+	
+	<h2>USING COLOR THEORY TO CHOOSE COLORS</h2>
+
+	<div class="cardpleft">
+  <img src="images/color_theory.png" alt= "color theory example" width= "100%">
+		 <div class="container">
+    <p class="strongp"><strong>EXAMPLE OF COLOR WHEEL</strong></p><br>
+  </div>
+</div>
+	<p><q>The principles of color theory revolve around the color wheel, which visually portrays the relationships between different colors.</q></p>
 	<p>Color theory is a practical framework for determining which colors work well together. The principles of color theory revolve around the color wheel, which visually portrays the relationships between different colors. The color wheel contains primary, secondary, and tertiary colors. It can also be divided into warm and cool colors. Familiarizing yourself with the color wheel is the first step to learning how to choose harmonious colors.</p>
 	
-	<h3>Color Schemes</h3>
+	<h3>COLOR SCHEMES</h3>
 	<p>A color scheme is a harmonious combination of colors. The three main types of color schemes designers should know about are <strong>monochromatic</strong>, <strong>complementary</strong>, and <strong>analogous</strong>. You could think of these schemes as sort of like templates for choosing colors. Let's look at each one in more detail.</p>
 	
 	
-	<h4>Monochromatic</h4>
-		<img src="images/monochromatic.png" class="leftimage" alt= "typeface versus font" width= "40%">
+	<h4>MONOCHROMATIC</h4>
+	<div class="cardpleft">
+  <img src="images/monochromatic.png" alt= "monochromatic color scheme example" width= "100%">
+		 <div class="container">
+    <p class="strongp"><strong>EXAMPLE OF MONOCHROMATIC COLOR SCHEME</strong></p><br>
+  </div>
+</div>
 	<p>Monochromatic color schemes are based on a single hue ("mono" means one). Hues are primary and secondary colors, like red, yellow, and green. To create a monochromatic color scheme, you'd pick a hue, for instance blue, and use tints, shades, and tones to create a harmonious palette. Monochromatic colors tick the box for visual appeal, but be careful to create enough contrast for legibility.</p>
 
 	
-	<h4 style="clear: both">Complementary</h4>
-	<img src="images/comp2.png" class="rightimage" alt= "typeface versus font" width= "40%">
+	<h4 style="clear: both">COMPLEMENTARY</h4>
+	<div class="cardpleft">
+  <img src="images/comp2.png" alt= "complimentary color scheme example" width= "100%">
+		 <div class="container">
+    <p class="strongp"><strong>EXAMPLE OF COMPLIMENTARY COLOR SCHEME</strong></p><br>
+  </div>
+</div>
 	<p>Complementary color schemes consist of colors on opposite ends of the color wheel. For example, red and green or blue and orange. Complementary colors tend to contrast well and are therefore a popular choice for web design. However, the contrast can be striking and should therefore be used intentionally in order to ensure that the colors aren't too distracting.</p>
 	
-	<h4 style="clear: both">Analogous</h4>
-	<img src="images/analogous.png" class="leftimage" alt= "typeface versus font" width= "40%">
+	<h4 style="clear: both">ANALOGOUS</h4>
+	<div class="cardpleft">
+  <img src="images/analogous.png" alt= "analogous color scheme example" width= "100%">
+		 <div class="container">
+    <p class="strongp"><strong>EXAMPLE OF ANALOGOUS COLOR SCHEME</strong></p><br>
+  </div>
+</div>
 	<p>Analogous color schemes are made of colors that sit next to each other on the color wheel. These color schemes are inherently visually appealing, but as with monochromatic color schemes, be careful to create enough contrast for legibility. A tip for using an analogous color scheme on a website is to pair it with a neutral color like black or white in order to improve readability.</p>
 	<p><a href="https://www.flux-academy.com/blog/what-is-color-theory">Click here for an in-depth guide on color theory.</a></p>
 	<p>Once you have a good handle on color theory, creating harmonious color palettes becomes more intuitive. But which scheme is best for a given project, and how do you decide which sections of the color wheel to use? This is where color psychology comes into play.</p>
 	
-	<h2>Using Color Psychology To Choose Colors</h2>
+	<h2>USING COLOR PSYCHOLOGY TO CHOOSE COLORS</h2>
 	<p>Whereas color theory is centered on creating harmonious color schemes, color psychology is concerned with the feelings and emotions different colors evoke. Feelings and emotions may sound wishy-washy in a business context, but they actually play a critical role in branding, marketing, and sales. In fact, <a href="https://www.psychologytoday.com/us/blog/inside-the-consumer-mind/201302/how-emotions-influence-what-we-buy#:~:text=The%20emotional%20core%20of%20consumer%20decision%2Dmaking&text=Most%20people%20believe%20that%20the,cases%2C%20even%20determine%20our%20decisions.&text=These%20emotions%20create%20preferences%2C%20which%20lead%20to%20our%20decision.">emotions are at the core of a consumer's decision making process.</a></p>
 	
-	<h3>Color Meanings</h3>
+	<h3>COLOR MEANINGS</h3>
+	<p><q>Context is crucial to consider when choosing colors for a brand or website.</q></p>
 	<p>One way to incorporate color psychology when choosing colors for a website is through consideration of common color meanings. Different colors, both consciously and subconsciously, spark certain feelings. These feelings are largely influenced by cultural contexts, as well as personal experiences. Below are some examples of common color associations:</p>
 	<ol class="bodyul">
 		<li>Red: passion, power, love, danger, excitement</li>
@@ -88,31 +124,47 @@
 	</ol>
 	<p>Some color meanings appear contradictory. For instance, red often denotes danger, but it can also convey love and passion. Black can evoke feelings of power in some cases and depression in others. The key here is <strong>context</strong>.</p>
 	<p>Context is crucial to consider when choosing colors for a brand or website. Using the color red for a website won't automatically signal danger, just like it won't automatically signal romance. The other elements on the page, such as typography, imagery, and messaging, all work symbiotically to convey a certain look and feel.</p>
+	<img src="images/websiteexample.png" class="centerimage" alt= "monochromatic website example" width= "60%">
+	<div class="quote"><p style="clear:both" class="centertext">Photo credit: <cite>Example of a website with a monochromatic red color scheme. <br>Source: <a href="https://dribbble.com/kateryna_kaida">Kateryna Kaida</a> via Dribbble.</cite></p></div>
+	
 	<p>Color psychology can help inform which colors would best represent your client's brand. It makes sense to use green for a health-centered website because of the color's associations with health, nature, and abundance. However, in creative fields like design, rules are sometimes meant to be broken. Within the right context, an unexpected color scheme could work favorably for a brand. A health brand with a red color scheme would certainly stand out among its green competitors; the trick is to make it stand out in a <em>good</em> way, a skill that takes time and practice to master.</p>
 	<p><a href="https://www.flux-academy.com/blog/the-psychology-of-color-how-valuable-web-designers-choose-colors">Click here for an in-depth guide on color psychology.</a></p>
 	
-	<h2>How To Create A Color Palette For A Website</h2>
+	<h2>HOW TO CREATE A COLOR PALETTE FOR A WEBSITE</h2>
 	<p>Now that we've reviewed the fundamentals of color theory and psychology, we're ready to put what we've learned into practice in order to create strategic color palettes for websites. Aesthetics are certainly important in the web design world; but a pretty color palette that's thrown together without intention or strategy won't serve anyone.</p>
 	<p>Here's a simple, 3-step process for choosing colors for a website like a pro.</p>
 	
-	<h3>1. Choose A Primary Color</h3>
+	<h3>CHOOSE A PRIMARY COLOR</h3>
 	<p>The best place to start when creating a color palette is with the primary color. A palette's primary color is the star of the show. If we follow the <strong>60/30/10 rule</strong>, the primary color takes up about 60% of the color on a website.</p>
 	<p>When choosing a strong primary color, it's helpful to consider two things: <strong>color psychology</strong> and <strong>context</strong>. Reference the color meanings listed above to determine which color best conveys the emotions that users should feel when they land on the website. Should they feel calm or excited? Free or secure? Curious or protected? Don't forget to consider context; relying too heavily on common color associations can be detrimental out of context.</p>
+	
+	<img src="images/facebook.jpeg" class="centerimage" alt= "primary color example" width= "60%">
+	<div class="quote"><p style="clear:both" class="centertext">Photo Credit: <cite>The primary color in this example is light pink. <br>Source: <a href="https://design.facebook.com">Facebook Design</a></cite></p></div><br>
+	
 	<p><a href="https://www.flux-academy.com/blog/how-to-strategically-use-color-in-website-design">P.S. Check out this post to learn more about the 60/30/10 rule and other tips for choosing colors strategically.</a></p>
 	
-	<h3>2. Choosing Secondary Colors</h3>
+	<h3>CHOOSING SECONDARY COLORS</h3>
 	<p>Once you've chosen a primary color, select one or more secondary colors. According to the 60/30/10 rule, secondary colors take up about 30% of a website. In order to choose secondary colors, you'll need to first determine which type of color scheme is best for the website: monochromatic, complementary, or analogous.</p>
 	<p>Color psychology can play a role here as well. Soft, muted colors convey a totally different look and feel from bright, vivid colors. A monochromatic blue color scheme might appear calming and soothing; but a complementary blue and orange color scheme could look playful and exciting.</p>
+	
+	<img src="images/powder.png" class="centerimage" alt= "secondary color example" width= "60%">
+	<div class="quote"><p style="clear:both" class="centertext">Photo Credit: <cite>Purple is a secondary color on <a href="https://powder.gg">Powder’s website.</a></cite></p></div><br>
+	
 	<p>Pro tip: Use an interactive color wheel tool like <a href="https://www.canva.com/colors/color-wheel/">Canva's</a> or <a href="https://color.adobe.com">Adobe's</a> to play around with different color schemes.</p>
 	
-	<h3>3. Choose An Accent Color</h3>
+	<h3>CHOOSE AN ACCENT COLOR</h3>
 	<p>Last but not least, every color palette should include an accent color. This color is used sparingly, taking up about 10% of real estate on a website. Often, the accent color contrasts strongly against the primary color. This contrast helps the accent color stand out and draw attention to important elements on the page, for instance buttons.</p>
+	
+	<img src="images/plant.png" class="centerimage" alt= "accent color example" width= "60%">
+	<div class="quote"><p style="clear:both" class="centertext">Photo Credit: <cite>In this example, the accent color is bright yellow. Source: <a href="https://dribbble.com/Tubik">tubik</a> via Dribbble</cite></p></div><br>
+	
 	<p>The term "accent color" typically calls to mind vibrant colors like teal or orange. But note that black and white are considered colors as well and can be used effectively as accent colors, especially on more colorful websites.</p>
 	
-	<h2>Learn The Art And Strategy Of High-Value Websites</h2>
+	<h2>LEARN THE ART AND STRATEGY OF HIGH-VALUE WEBSITES</h2>
 	<p>In this guide, we reviewed color theory and psychology fundamentals and laid out a 3-step process for creating strategic color palettes for websites. Once you've mastered the process of choosing colors, you're well on your way to creating high-value websites for clients. But what other skills are needed in order to improve your web design process so that you can provide more value to your clients, and in turn, charge more for your work?</p>
 	<p>Color is just one of several visual design principles every web designer should master. Other important principles include typography, layout, and UX. And in order to put these principles to work, it's essential to master the strategy behind web design. Conducting strategy sessions with your clients will help you uncover what problems they're facing and what goals they're trying to reach; the secret to high-value web design is setting measurable objectives upfront and solving real problems.</p>
-	<p>In sum, creating high-value websites is a combination of art and strategy. Our web design course, <a href="https://www.flux-academy.com/courses/web-design-masterclass">The $10k Website Process</a>, teaches just that. This comprehensive course teaches Ran Segall's tried-and-true process for creating standout websites that create real results for clients. The course will give you the tools and confidence you need to book your dream clients and charge more for your work. <a href="https://www.flux-academy.com/courses/web-design-masterclass">Click here to learn more about the course and join the waitlist.</a></p>
+	<p>In sum, creating high-value websites is a combination of art and strategy. Our web design course, <a href="https://www.flux-academy.com/courses/web-design-masterclass">The $10k Website Process</a>, teaches just that. This comprehensive course teaches Ran Segall's tried-and-true process for creating standout websites that create real results for clients. The course will give you the tools and confidence you need to book your dream clients and charge more for your work.</p>
+	<a href="https://www.flux-academy.com/courses/web-design-masterclass" target="_blank" class="button">LEARN MORE</a>
 	
 </section>
 	
