--- a/typography.html
+++ b/typography.html
@@ -30,36 +30,63 @@
 		
 
 	<h2>IS IT A FONT OR A TYPEFACE?</h2>
-		<img src="images/typeface_vs_font2.png" class="leftimage" alt= "typeface versus font" width= "40%">
+		<div class="cardpleft">
+  <img src="images/typeface_vs_font2.png" alt= "typeface vs. fonts" width= "100%">
+		 <div class="container">
+    <p class="strongp"><strong>TYPEFACE VS. FONTS</strong></p><br>
+  </div>
+</div>
 		<p> Let’s talk about the elephant in the room first. Font vs typeface, what’s the difference? Which is correct? The terms typeface and font are sometimes used interchangeably which can be a little confusing.</p>
 		<p> A <strong>typeface</strong> is a collection of fonts while a <strong>font</strong> refers to a specific style or weight within a typeface family. So let’s put this context with an example. Helvetica is a typeface. But Helvetica Bold is a specific font within the Helvetica typeface family. Here’s a visual example so you can see the difference between a typeface and fonts.</p>
 		
 	  <h2 style="clear: both">WHAT IS TYPOGRAPHY?</h2>
 		<q>Typography is the art and technique of arranging type.</q>
 		<p>Now that we understand what a typeface and a font are, what is typography? Typography is the art and technique of arranging type. Whether you’re designing a website, an app, or a poster, you’re using type to deliver a message.</p> 
-		<div class="rightimage"><a href="https://www.designer-daily.com/15-cool-examples-of-good-typography-and-lettering-50364" target="_blank" class="button">TYPOGRAPHY<br>EXAMPLES</a></div>
 		<p>Typography serves two main purposes. The first is it must be legible. Can a user read and understand it? The second is how you use typography to create a mood or design aesthetic to attract a specific audience.</p>
 		<p>Learning the fundamental rules of type, so you can break them later, will help you become a better designer. It just takes practice and a little knowledge. If you want to learn more about type and how it relates to design, check out this article <a href="https://www.flux-academy.com/blog/what-is-typography" target="_blank">What is typography?</a></p>
+		<a href="https://www.designer-daily.com/15-cool-examples-of-good-typography-and-lettering-50364" target="_blank" class="button">TYPOGRAPHY EXAMPLES</a>
 	
 	<h2>CATEGORIES OF TYPE</h2>
-	<img src="images/categories_of_type2.png" class="rightimage" alt= "categories of type: serif, sans serif, and decorative" width= "40%">
+		<div class="cardpright">
+  <img src="images/categories_of_type2.png" alt= "categories of type" width= "100%">
+		 <div class="container">
+    <p class="strongp"><strong>CATEGORIES OF TYPE</strong></p><br>
+  </div>
+</div>
 		<p>In order to know how to choose fonts, we need to understand the various categories of type, the characteristics of each, and recommended usage. In this guide, we’ll refer to three different categories of type when choosing font pairings.</p>
 		
 	<h3 style="clear: both">SERIF TYPEFACES</h3>
-	<img src="images/serifs2.png" class="leftimage" alt= "various serif typefaces" width= "40%">
+		<div class="cardpleft">
+  <img src="images/serifs2.png" alt= "serif typefaces" width= "100%">
+		 <div class="container">
+    <p class="strongp"><strong>SERIF TYPEFACES</strong></p><br>
+  </div>
+</div>
 			<p>A serif is a small line or stroke attached to the end of a larger stroke, often referred to as the “feet” shown at the bottom of letters. Not all serifs are equal. Some have slight variations depending on the typeface and that is part of what makes them unique. An advantage of using serif typefaces is how many font weights they usually have within a family. One serif family might have a regular, italics, semi bold, semi bold italic, bold, bold italic, small caps, and more.</p>
-		<div class="rightimage"><a href="https://fonts.adobe.com/fonts?browse_mode=default&cc=true&filters=cl%3Ase&min_styles=1&max_styles=26" target="_blank" class="button">DOWNLOAD<br>SERIF TYPEFACES</a></div>
 			<p>Serif typefaces are more formal and traditional. They’re often used editorially such as in newspapers, magazines, and the body copy of books. One of the most well-known serif typefaces and probably the first font you ever used on a computer is Times New Roman.</p>
+		<a href="https://fonts.adobe.com/fonts?browse_mode=default&cc=true&filters=cl%3Ase&min_styles=1&max_styles=26" target="_blank" class="button">SERIF TYPEFACES</a>
 	
 	
 	<h3 style="clear:both">SANS SERIF TYPEFACES</h3>
-	<img src="images/sans_serifs2.png" class="rightimage" alt= "various sans serif typefaces" width= "40%">
+		<div class="cardpright">
+  <img src="images/sans_serifs2.png" alt= "sans serif typefaces" width= "100%">
+		 <div class="container">
+    <p class="strongp"><strong>SANS SERIF TYPEFACES</strong></p><br>
+  </div>
+</div>
+
 			<p class="justify">Sans serif typefaces do not have serifs (the French word sans, means “without”). These typefaces are more modern, bold, and great for eye-catching headlines. One of the most popular sans serif typefaces is Arial which is a copycat of Helvetica. Our main brand fonts here at Flux are two san serif typefaces.</p>
-			<div class="leftimage"><a href="https://fonts.adobe.com/fonts?browse_mode=default&cc=true&max_styles=26&min_styles=1&filters=cl%3Ass" target="_blank" class="button">DOWNLOAD SANS<br>SERIF TYPEFACES</a></div>
+			<div class="leftimage"><a href="https://fonts.adobe.com/fonts?browse_mode=default&cc=true&max_styles=26&min_styles=1&filters=cl%3Ass" target="_blank" class="button">SANS SERIF TYPEFACES</a></div>
+		
 	<h3 style="clear:both">DECORATIVE TYPEFACES</h3>
-	<img src="images/decoratives2.png" class="leftimage" alt= "various decorative typefaces" width= "40%">
+		<div class="cardpleft">
+  <img src="images/decoratives2.png" alt= "decorative typefacese" width= "100%">
+		 <div class="container">
+    <p class="strongp"><strong>DECORATIVE TYPEFACES</strong></p><br>
+  </div>
+</div>
 			<p>This category of typeface should be used sparingly, most for titles and headlines. It can range from scripts to monotype, and anything in between. These are a great way to add character to your design but should be avoided for long paragraphs of body copy as they can be difficult to read.</p>
-			<div class="rightimage"><a href="https://fonts.adobe.com/fonts?browse_mode=default&cc=true&max_styles=26&min_styles=1&filters=cl%3Ahm" target="_blank" class="button">DOWNLOAD <br>DECORATIVE TYPEFACES</a></div>
+			<div style="clear: both"></div><a href="https://fonts.adobe.com/fonts?browse_mode=default&cc=true&max_styles=26&min_styles=1&filters=cl%3Ahm" target="_blank" class="button">DECORATIVE TYPEFACES</a>
 	<h2 style="clear: both">TIPS FOR CHOOSING FONTS</h2>
 			<p class="centertext">We’ve discussed what typography is as well as some of the main categories of type, now let’s dive into tips for how to choose the best fonts.</p>
 		
@@ -74,15 +101,31 @@
 		<iframe width="700" height="400" class="centerimage" src="https://www.youtube.com/embed/T5bnFdXSBRA?si=k4Ox8FavX8sx6aT1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 		
 	<h3>CREATE CONTRAST WITH YOUR SECOND FONT</h3>
+	<div class="cardpleft">
+  <img src="images/bad_headline_body2.png" alt= "BAD EXAMPLE OF FONT CONTRAST" width= "100%">
+		 <div class="container">
+    <p class="strongp"><strong>BAD EXAMPLE OF FONT CONTRAST</strong></p><br>
+  </div>
+</div>
 	
-	<img src="images/bad_headline_body2.png" class="leftimage" alt= "similar fonts with headline and body copy look like a design mistake" width= "40%">
 		<p class="justify">Now that you have a main font for your design, the best way to choose a good secondary font is to make sure it’s dramatically different yet complements the design. You wouldn’t want to choose two serifs that look similar, there is no contrast and in fact, it looks like a design mistake. Take a look at this example, these are two different serif typefaces but it’s difficult to tell.</p>
 	
 	<h3 style="clear: both">TRY PAIRING OPPOSITES</h3>
-	<img src="images/good_headline_body2.png" class="rightimage" alt= "Example of pairing two opposite fonts, a sans serif headline with a serif typeface for body copy" width= "40%">
+		<div class="cardpright">
+  <img src="images/good_headline_body2.png" alt= "GOOD EXAMPLE OF FONT CONTRAST" width= "100%">
+		 <div class="container">
+    <p class="strongp"><strong>GOOD EXAMPLE OF FONT CONTRAST</strong></p><br>
+  </div>
+</div>
+	
 		<p class="justify">One of these ways to choose fonts is to choose a pair of opposites. A good example of this is to use a big and bold serif for your headline and a nice traditional serif typeface for the body copy. Take a look at this example, to see this tip in action.</p>
 	<h3 style="clear: both">VARY WIDTH</h3>
-	<img src="images/vary_width2.png" class="leftimage" alt= "An example of pairing a condensed sans serif with another sans serif typeface" width= "40%">
+		<div class="cardpleft">
+  <img src="images/vary_width2.png" alt= "EXAMPLE OF A TYPEFACE WITH VARYING WIDTH" width= "100%">
+		 <div class="container">
+    <p class="strongp"><strong>EXAMPLE OF A TYPEFACE WITH VARYING WIDTH</strong></p><br>
+  </div>
+</div>
 	
 			<p>Another tip is to think about the width of the typeface and how they complement each other. For example, maybe you want to pair a condensed sans serif typeface with a wider san serif. While they are both the same category of type, they vary in contrast due to their width. Take a look at this example for inspiration.</p>
 	
@@ -98,8 +141,12 @@
 		
 		
 	<h3 style="clear:both">LIMIT YOUR DESIGN TO 2-3 TYPEFACES</h3>
-			
-	<img src="images/too_many2.png" class="leftimage" alt= "An example of using too many fonts, don’t do this" width= "40%">
+	<div class="cardpleft">
+  <img src="images/too_many2.png" alt= "EXAMPLE OF EXCESS TYPEFACES" width= "100%">
+		 <div class="container">
+    <p class="strongp"><strong>EXAMPLE OF EXCESS TYPEFACES</strong></p><br>
+  </div>
+</div>
 		<p>Just like choosing a color palette, it can be easy to get carried away with all the options available to use for your design. A good general rule is to stick to about 2–3 different typefaces total for a design. Now of course this might vary depending on what you are designing but it’s a good rule of thumb.</p>
 			<p>For example, if you’re designing a logo you’ll most likely modify one main font and maybe use a secondary typeface. For a website or an app, you’ll likely want to follow the same rule. Especially when designing for digital screens, legibility and accessibility are key to creating a good user experience.</p><br><br>
 	<img style="clear: both" src="images/tribeca.jpeg" class="rightimage" alt= "Tribeca Festival" width= "40%">
@@ -108,7 +155,13 @@
 		<div class="quote"><p style="clear:both" class="righttext">Photo credit: <cite>Poster design with 3 typefaces</cite></p></div>
 		
 	<h3 style="clear: both">AVOID TRENDY OR POPULAR TYPEFACES</h3>
-	<img src="images/comic_sans2.png" class="leftimage" alt= "Comic sans is an example of a once trendy typeface (don’t do this)." width= "40%">
+		<div class="cardpleft">
+  <img src="images/comic_sans2.png" alt= "EXAMPLE OF A TRENDY TYPEFACE" width= "100%">
+		 <div class="container">
+    <p class="strongp"><strong>EXAMPLE OF A TRENDY TYPEFACE</strong></p><br>
+  </div>
+</div>
+
 		<p>You want to choose typefaces that stand the test of time. Be wary of trendy or popular typefaces that you see everyone else using. If you choose something too niche or close to the times when designing a logo, for example, you’ll find yourself having to redesign it after a few short years. To avoid your design becoming outdated, include classic and well-known typefaces. Check out this fun article on <a href= "https://blog.spoongraphics.co.uk/articles/25-classic-fonts-that-will-last-a-whole-design-career25" target="_blank"> classic fonts that will last a whole design career.</a></p>
 		
 	<h3 style="clear:both">UNDERSTAND THE GOAL FOR THIS DESIGN</h3>
@@ -121,11 +174,11 @@
 			<div class="leftimage"><a href="https://www.instagram.com/flux.academy/" target="_blank" class="button">FOLLOW US</a></div>
 		<p>First, check out our <a href= "https://www.youtube.com/channel/UCN7dywl5wDxTu1RM3eJ_h9Q" target="_blank"> YouTube channel Flux where we share tons of free information on how to become a web designer.</a></p>
 	<img src="images/flux.png" class="centerimage" alt= "Check out the Flux YouTube channel." width= "100%"><cite></cite>
-		<div class="rightimage"><a href="https://www.flux-academy.com/our-courses" target="_blank" class="button">VIEW ALL COURSES</a></div>
 			<p>Consider checking out one of our programs for a deep dive into a specific topic. We offer 3 different programs that go deep into design, development, and how to build a successful freelance business. We give you the path to follow so you learn only the skills you need at your pace.</p>
 			<p>In <a href= "https://www.flux-academy.com/courses/web-design-masterclass" target="_blank">The $10k Website Process</a>, you’ll discover a step-by-step process to design beautiful, high-value websites that achieve strategic goals for your clients. Master the art and strategy of website design, and increase the value of your services, as well as your rates.</p>
 			<p>In <a href= "https://www.flux-academy.com/courses/the-webflow-masterclass" target="_blank">The Webflow Masterclass</a>, you’ll learn how to use Webflow to build custom, fully-functional websites quickly without learning how to code. Break free from restrictive templates, regain your creative freedom, and bring your best creations to life with this powerful visual development tool.</p>
 			<p>In <a href= "https://www.flux-academy.com/courses/freelancing-for-web-designers" target="_blank">The 6 Figure Freelance Designer</a>, you’ll learn how building a successful business as a freelancer is possible anywhere with an internet connection. We give you a roadmap to follow to consistently attract high-value clients and make a great living doing what you love.</p>
+		<a href="https://www.flux-academy.com/our-courses" target="_blank" class="button">LEARN MORE</a>
 
 	
 	</section>
