--- a/index.html
+++ b/index.html
@@ -20,18 +20,35 @@
 	</ul>
 	</nav>
 	
-	<header>
-	<h1>ABOUT</h1>
+	<header class="headerabout">
+		<img src="images/hero.png" alt= "hero image" width= "100%">
 	</header>
 	<section>
-		<img src="images/headshot.JPEG" class="rightimage" alt= "Evangelina Gabrisko Headshot" width= "25%">
+		
+	<h1>ABOUT</h1>
+		
+		 <div class="card">
+  <img src="images/headshot.JPEG" alt= "Evangelina Gabrisko Headshot" width= "100%">
+  <div class="container">
+    <p class="strongp"><strong>Evangelina Gabrisko</strong></p><br>
+  </div>
+</div>
+
+
+
+		
 		<p>This website is about web design created by Evangelina Gabrisko as a student project for ARTD 245: Web Design at North Central College in Naperville, IL, in 2025. All the text comes from the following articles located on the Dribbble website. All the images were created by me using Photoshop. The website has been created using HTML and CSS in Dreamweaver. </p>
-		<p> <a href="https://www.flux-academy.com/blog/the-ultimate-guide-to-choosing-fonts">"The Ultimate Guide to Choosing Fonts by Flux Academy"</a> by Monica Galvan</p>
-		<p> <a href="https://www.flux-academy.com/blog/ultimate-guide-to-choosing-colors-for-web-design" >"Ultimate Guide To Choosing Colors For Web Design"</a> by Stephanie Corrigan</p>
-		<p> <a href="https://dribbble.com/resources/education/principles-of-design" > "Dribbble: 11 Principles of Design" </a>by Renee Fleck</p>
 		<p><strong>Project brief:</strong></p>
 		<p>Design and develop a visually pleasing, interactive website with multiple HTML pages, navigation connecting all the pages, featuring a cohesive color scheme, a clear visual hierarchy, a balanced layout, exciting visuals, and text. The goal is to learn how to code/develop an interactive website by applying design principles.</p>
+	  <p style="clear: both"> <a href="https://www.flux-academy.com/blog/the-ultimate-guide-to-choosing-fonts">"The Ultimate Guide to Choosing Fonts by Flux Academy"</a> by Monica Galvan</p>
+		<p> <a href="https://www.flux-academy.com/blog/ultimate-guide-to-choosing-colors-for-web-design" >"Ultimate Guide To Choosing Colors For Web Design"</a> by Stephanie Corrigan</p>
+		<p> <a href="https://dribbble.com/resources/education/principles-of-design" > "Dribbble: 11 Principles of Design" </a>by Renee Fleck</p>
+		
 
 	</section>
+	
+	<footer>
+	<p class="centertext"><strong>Copyright © Evangelina Gabrisko, 2025 | Article <a href= "https://www.flux-academy.com/blog/ultimate-guide-to-choosing-colors-for-web-design">"Ultimate Guide To Choosing Colors For Web Design"</a></strong></p>
+</footer>
 </body>
 </html>
